--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@next/font": "^13.0.6",
     "antd": "^5.4.5",
     "axios": "^1.3.6",
+    "cloudinary": "^1.36.2",
     "cors": "^2.8.5",
     "dropzone": "^6.0.0-beta.2",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "fast-xml-parser": "^4.2.0",
+    "formidable": "^2.1.1",
     "fs": "^0.0.1-security",
     "import": "^0.0.6",
     "init-middleware": "^0.0.1",
