--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "init-middleware": "^0.0.1",
     "multer": "^1.4.5-lts.1",
     "next": "^13.0.6",
+    "next-cloudinary": "^4.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
