--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react-progress-bar": "^0.1.0",
     "reactdom": "^2.0.0",
     "styled-components": "^5.3.9",
+    "uuid": "^9.0.0",
     "xlsx": "^0.18.5",
-    "xml2js": "^0.5.0"
+    "xml2js": "^0.5.0",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@svgr/webpack": "^7.0.0",
